force-app/main/default/objects/PackageUsageSummary__c/PackageUsageSummary__c.object-meta.xml
<CustomObject>
    <label>PackageUsageSummary</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>PackageUsageSummary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PackageUsageSummaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>