force-app/main/default/objects/PackageUsageSummary__c/fields/combined_key__c.field-meta.xml
<CustomField>
    <fullName>combined_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>UserToken-package_id-custom_entity
Unique key to facilitate deduplication.</description>
    <externalId>true</externalId>
    <label>Combined Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>