force-app/main/default/objects/PackageUsageSummary__c/fields/custom_entity__c.field-meta.xml
<CustomField>
    <fullName>custom_entity__c</fullName>
    <label>Custom Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>