force-app/main/default/objects/PackageUsageSummary__c/fields/custom_entity_type__c.field-meta.xml
<CustomField>
    <fullName>custom_entity_type__c</fullName>
    <label>Custom Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>