force-app/main/default/objects/PackageUsageSummary__c/fields/managed_package_namespace__c.field-meta.xml
<CustomField>
    <fullName>managed_package_namespace__c</fullName>
    <label>Managed Package Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>