force-app/main/default/objects/PackageUsageSummary__c/fields/num_views__c.field-meta.xml
<CustomField>
    <fullName>num_views__c</fullName>
    <label>Num Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>