force-app/main/default/objects/PackageUsageSummary__c/fields/package_id__c.field-meta.xml
<CustomField>
    <fullName>package_id__c</fullName>
    <label>Package ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>