force-app/main/default/objects/PackageUsageSummary__c/fields/user_id_token__c.field-meta.xml
<CustomField>
    <fullName>user_id_token__c</fullName>
    <label>User ID Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>