force-app/main/default/objects/PackageUsageSummary__c/fields/user_type__c.field-meta.xml
<CustomField>
    <fullName>user_type__c</fullName>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>